--- a/pathlib.ipynb
+++ b/pathlib.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "## Contents\n",
     "\n",
-    "1. [Imports](#imports)\n",
+    "1. [Imports](#Imports)\n",
     "2. [Creating a `Path` Object](#create)\n",
     "3. [Extending Paths](#extend)\n",
     "4. [Path Attributes](#attributes)\n",
@@ -26,7 +26,7 @@
    "source": [
     "----\n",
     "\n",
-    "## Imports  <a id=\"imports\"></a>\n",
+    "## Imports\n",
     "\n",
     "Only the `Path` class is needed. Since `pathlib` is part of Python's standard library, no module needs to be installed."
    ]
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e9826c1",
+   "id": "09a126ee",
    "metadata": {},
    "source": [
     "Depending on your OS, you will get either a PosixPath or a WindowsPath object:"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cbc9467",
+   "id": "7c56e92c",
    "metadata": {},
    "source": [
     "----\n",
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "904df62c",
+   "id": "101fc812",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "5c585a41",
+   "id": "c967903b",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85aa9a4f",
+   "id": "205483ea",
    "metadata": {},
    "source": [
     "----\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb02bb54",
+   "id": "24edc0f2",
    "metadata": {},
    "source": [
     "### `name`\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4d70ebb",
+   "id": "8fd99045",
    "metadata": {},
    "source": [
     "### `stem`\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6432ffd7",
+   "id": "1f223bf3",
    "metadata": {},
    "source": [
     "### `parent`\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e26f93",
+   "id": "06248347",
    "metadata": {},
    "source": [
     "### `parents`\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "40491c76",
+   "id": "0c3cc694",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f54863e",
+   "id": "32d4e210",
    "metadata": {},
    "source": [
     "### `parts` <a id=\"parts\"></a>\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "3c16e691",
+   "id": "365b7aea",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5788d7e",
+   "id": "834f2ac6",
    "metadata": {},
    "source": [
     "### `root`\n",
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91586503",
+   "id": "1dda8fbf",
    "metadata": {},
    "source": [
     "### `anchor`"
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "191561b7",
+   "id": "d739a0dc",
    "metadata": {},
    "source": [
     "### `suffix`\n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "341b389d",
+   "id": "457f68b4",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "9d1072ce",
+   "id": "63d2aad5",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f17ad2cb",
+   "id": "3e16f10f",
    "metadata": {},
    "source": [
     "In case of multiple suffixes, only the last one is returned:"
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "c04cafac",
+   "id": "1b39b59f",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f908221c",
+   "id": "e4cc7206",
    "metadata": {},
    "source": [
     "----\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01099617",
+   "id": "92ae686a",
    "metadata": {},
    "source": [
     "## `as_posix()` <a id=\"as-posix\"></a>"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04dfd200",
+   "id": "6db5e954",
    "metadata": {},
    "source": [
     "## `as_uri()` <a id=\"as-uri\"></a>"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84fcf291",
+   "id": "bd6cf0ff",
    "metadata": {},
    "source": [
     "## `iterdir()` <a id=\"iterdir\"></a>\n",
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3a0fdfb",
+   "id": "122b0263",
    "metadata": {},
    "source": [
     "## `home()` <a id=\"home\"></a>\n",
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "57347767",
+   "id": "2445c4ea",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0397bb8",
+   "id": "6a074659",
    "metadata": {},
    "source": [
     "----\n",
