--- a/pathlib.ipynb
+++ b/pathlib.ipynb
@@ -11,12 +11,13 @@
     "\n",
     "## Contents\n",
     "\n",
-    "1. [Imports](#Imports)\n",
-    "2. [Creating a `Path` Object](#create)\n",
+    "1. [Imports](#imports)\n",
+    "2. [Creating a `Path` Object](#create-path)\n",
     "3. [Extending Paths](#extend)\n",
-    "4. [Path Attributes](#attributes)\n",
-    "5. [Path Methods](#methods)\n",
-    "6. [Comparing Paths](#comparing)"
+    "4. [Creating and Removing Folder](#create-and-delete-folder)\n",
+    "5. [Path Attributes](#attributes)\n",
+    "6. [Path Methods](#methods)\n",
+    "7. [Comparing Paths](#comparing)"
    ]
   },
   {
@@ -26,14 +27,14 @@
    "source": [
     "----\n",
     "\n",
-    "## Imports\n",
+    "## Imports  <a id=\"imports\"></a>\n",
     "\n",
     "Only the `Path` class is needed. Since `pathlib` is part of Python's standard library, no module needs to be installed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 186,
    "id": "6c176ce6",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
    "source": [
     "----\n",
     "\n",
-    "## Creating a `Path` Object  <a id=\"create\"></a>\n",
+    "## Creating a `Path` Object  <a id=\"create-path\"></a>\n",
     "\n",
     "We ceate a path object with the current working direcetory, i.e. `Path.cwd()`, as location.\n",
     "Note that `cwd()` is a static method, so we can call it on the class directly. \n",
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 187,
    "id": "6cbbb19a",
    "metadata": {},
    "outputs": [],
@@ -68,15 +69,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a126ee",
+   "id": "64841829",
    "metadata": {},
    "source": [
-    "Depending on your OS, you will get either a PosixPath or a WindowsPath object:"
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    Depending on your OS, you will get either a PosixPath or a WindowsPath object:\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 188,
    "id": "80dcbb93",
    "metadata": {
     "scrolled": true
@@ -88,7 +91,7 @@
        "WindowsPath('D:/Projects/Tutorials')"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c56e92c",
+   "id": "071ec102",
    "metadata": {},
    "source": [
     "----\n",
@@ -111,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "101fc812",
+   "execution_count": 189,
+   "id": "28c83a5f",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +124,7 @@
        "WindowsPath('D:/Projects/Tutorials/test')"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,8 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "c967903b",
+   "execution_count": 190,
+   "id": "9bf775c1",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +146,7 @@
        "WindowsPath('D:/Projects/Tutorials/A/B/C/test')"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +158,88 @@
   },
   {
    "cell_type": "markdown",
-   "id": "205483ea",
+   "id": "8cbc8b47",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "\n",
+    "## Creating and Removing Folders <a id=\"create-and-delete-folder\"></a>\n",
+    "\n",
+    "With a single command, we can create a folder at the specified path and define what to do if 1) the folder already exists and 2) the parent folders do not exist. If we want to remove a folder, it has to be empty. The `exists()` method confirms that we successfully created / deleted the folder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d6284f3",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    If the exist_ok flag is set to True, no error is generated if the folder already exists.\n",
+    "    If the parents flag is set to True, any parent folders that do not exist will also be created.\n",
+    "    By default both options are set to False.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "835b06b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_dir = cwd / \"new\"\n",
+    "new_dir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "new_dir.exists()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18b32e7a",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "    Note that rmdir() will throw an exception if the folder doesn't exist.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "2d197187",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_dir.rmdir()\n",
+    "\n",
+    "new_dir.exists()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1de9e35",
    "metadata": {},
    "source": [
     "----\n",
@@ -171,12 +255,13 @@
     "5. [`parts`](#parts)\n",
     "6. [`root`](#root)\n",
     "7. [`anchor`](#anchor)\n",
-    "8. [`suffix`](#suffix)"
+    "8. [`suffix`](#suffix)\n",
+    "9. [`suffixes`](#suffixes)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "24edc0f2",
+   "id": "e3ec4ce1",
    "metadata": {},
    "source": [
     "### `name`\n",
@@ -186,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 193,
    "id": "ac6579bf",
    "metadata": {},
    "outputs": [
@@ -196,7 +281,7 @@
        "'Tutorials'"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd99045",
+   "id": "36d5c0b9",
    "metadata": {},
    "source": [
     "### `stem`\n",
@@ -217,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 194,
    "id": "a49328f2",
    "metadata": {},
    "outputs": [
@@ -227,7 +312,7 @@
        "'Tutorials'"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f223bf3",
+   "id": "0dfd35a3",
    "metadata": {},
    "source": [
     "### `parent`\n",
@@ -248,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 195,
    "id": "732700ef",
    "metadata": {},
    "outputs": [
@@ -258,7 +343,7 @@
        "WindowsPath('D:/Projects')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06248347",
+   "id": "46caf50e",
    "metadata": {},
    "source": [
     "### `parents`\n",
@@ -279,8 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "0c3cc694",
+   "execution_count": 196,
+   "id": "5a58adcb",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d4e210",
+   "id": "5bfd026b",
    "metadata": {},
    "source": [
     "### `parts` <a id=\"parts\"></a>\n",
@@ -309,8 +394,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "365b7aea",
+   "execution_count": 197,
+   "id": "237b7424",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +404,7 @@
        "('D:\\\\', 'Projects', 'Tutorials')"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "834f2ac6",
+   "id": "09a519ae",
    "metadata": {},
    "source": [
     "### `root`\n",
@@ -340,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 198,
    "id": "d2888a14",
    "metadata": {},
    "outputs": [
@@ -350,7 +435,7 @@
        "'\\\\'"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,15 +446,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dda8fbf",
+   "id": "4baad76a",
    "metadata": {},
    "source": [
-    "### `anchor`"
+    "### `anchor`\n",
+    "\n",
+    "Concatenation of drive and root:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 199,
    "id": "4f32c6d7",
    "metadata": {},
    "outputs": [
@@ -379,7 +466,7 @@
        "'D:\\\\'"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,18 +477,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d739a0dc",
+   "id": "233b0f1c",
    "metadata": {},
    "source": [
     "### `suffix`\n",
     "\n",
-    "Returns the suffix of a file if it exists:"
+    "Returns the suffix of a file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "457f68b4",
+   "execution_count": 200,
+   "id": "7ec54341",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +497,7 @@
        "''"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,8 +508,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "63d2aad5",
+   "execution_count": 201,
+   "id": "11ab5364",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +518,7 @@
        "'.py'"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,16 +530,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e16f10f",
+   "id": "75f1b7c0",
    "metadata": {},
    "source": [
-    "In case of multiple suffixes, only the last one is returned:"
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "    In case of multiple suffixes, only the last one is returned:\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "1b39b59f",
+   "execution_count": 202,
+   "id": "baba945f",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +550,7 @@
        "'.gz'"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +562,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4cc7206",
+   "id": "699dcd35",
+   "metadata": {},
+   "source": [
+    "### `suffixes`\n",
+    "\n",
+    "Returns a list of all suffixes of a file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "60627ff6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.tar', '.gz']"
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_file = cwd / \"test.tar.gz\"\n",
+    "test_file.suffixes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4524e55",
    "metadata": {},
    "source": [
     "----\n",
@@ -486,23 +607,23 @@
     "2. [`as_uri()`](#as-uri)\n",
     "3. [`iterdir()`](#iterdir)\n",
     "4. [`home()`](#home)\n",
-    "5. [`is_file`](#is-file)\n",
-    "6. [`is_dir`](#is-dir)\n",
-    "7. [`is_symlink`](#is-symlink)\n",
-    "8. [`is_`](#)"
+    "5. [`exists()`](#exists)\n",
+    "6. [`is_file`](#is-file)\n",
+    "7. [`is_dir`](#is-dir)\n",
+    "8. [`is_symlink`](#is-symlink)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "92ae686a",
+   "id": "21b8f80d",
    "metadata": {},
    "source": [
-    "## `as_posix()` <a id=\"as-posix\"></a>"
+    "### `as_posix()` <a id=\"as-posix\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 203,
    "id": "3b2139c9",
    "metadata": {},
    "outputs": [
@@ -512,7 +633,7 @@
        "'D:/Projects/Tutorials'"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,15 +644,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6db5e954",
+   "id": "643bee81",
    "metadata": {},
    "source": [
-    "## `as_uri()` <a id=\"as-uri\"></a>"
+    "### `as_uri()` <a id=\"as-uri\"></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 204,
    "id": "96bc11d8",
    "metadata": {},
    "outputs": [
@@ -541,7 +662,7 @@
        "'file:///D:/Projects/Tutorials'"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,17 +673,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd6cf0ff",
+   "id": "24ee16ca",
    "metadata": {},
    "source": [
-    "## `iterdir()` <a id=\"iterdir\"></a>\n",
+    "### `iterdir()` <a id=\"iterdir\"></a>\n",
     "\n",
     "This method provides an iterator over the children of the path. In other words, it allows us to list the contents of the folder that our path is pointing towards:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 205,
    "id": "7945ca9b",
    "metadata": {},
    "outputs": [
@@ -570,9 +691,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0   .ipynb_checkpoints\n",
-      "1   matplotlib.ipynb\n",
-      "2   pathlib.ipynb\n"
+      "0   .git\n",
+      "1   .gitignore\n",
+      "2   .ipynb_checkpoints\n",
+      "3   LICENSE\n",
+      "4   matplotlib.ipynb\n",
+      "5   pathlib.ipynb\n",
+      "6   README.md\n"
      ]
     }
    ],
@@ -583,18 +708,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "122b0263",
+   "id": "477d1333",
    "metadata": {},
    "source": [
-    "## `home()` <a id=\"home\"></a>\n",
+    "### `home()` <a id=\"home\"></a>\n",
     "\n",
     "Returns path to home directory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "2445c4ea",
+   "execution_count": 206,
+   "id": "6c126281",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +728,7 @@
        "WindowsPath('C:/Users/Luca')"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,12 +739,55 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a074659",
+   "id": "98bc75a9",
+   "metadata": {},
+   "source": [
+    "### `exists()` <a id=\"exists\"></a>\n",
+    "\n",
+    "`True` if folder / file exists, else `False`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0c0c924",
+   "metadata": {},
+   "source": [
+    "### `is_file()` <a id=\"is-file\"></a>\n",
+    "\n",
+    "`True` if path points to a file, else `False`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19f0ad53",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### `is_dir()` <a id=\"is-dir\"></a>\n",
+    "\n",
+    "`True` if path points to a folder, else `False`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c73409",
+   "metadata": {},
+   "source": [
+    "### `is_symlink()` <a id=\"is-symlink\"></a>\n",
+    "\n",
+    "`True` if path points to a symlink, else `False`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5433e409",
    "metadata": {},
    "source": [
     "----\n",
     "\n",
-    "## Comparing Paths  <a id=\"comparing\"></a>"
+    "## Comparing Paths  <a id=\"comparing\"></a>\n",
+    "\n",
+    "Paths are immutable and hashable. If they are of the same flavor, i.e. PosixPath or WindowsPath, they can be compared and ordered."
    ]
   }
  ],
